--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
     <link rel="stylesheet" href="https://fonts.borgcreative.com/fonts.css">
+    <link rel="stylesheet" href="./racoon.css">
+    <script src="./menu.js"></script>
+    <noscript> 
+        <h3>Uh Oh!</h3>
+        <p>This website requires Javascript in order for menus to function properly.</p>
+        <p>Please activate Javascript and reload.</p>
+
+    </noscript>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ThoughtAnarch</title>
+    <link rel="shortcut icon" href="./ThoughtLiberty.png" type="image/x-icon">
 </head>
-<body>
-    
+
+<header id="header">
+
+
+</header>
+
+<body onload="menu()">
+
+
+
 </body>
 </html>
